Fix overflow
Hide overflow X for better UX in mobile versions

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 ul {
   list-style: none;
 }
